--- a/server/.env.example
+++ b/server/.env.example
@@ -1,2 +1,2 @@
-MONGO_URL=mongodb://127.0.0.1:27017/my_movie_db
+MONGO_URL=mongodb+srv://your_username:your_password@your-cluster.mongodb.net/my_movie_db
 PORT=4000
